--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,40 +1,60 @@
-*{
-	margin: 0;
-	padding: 0;
-}
-body{
-	font-family: "Trebuchet MS",Helvetica,sans-serif;
-	background: #fff url(../img/fundo.png) repeat-x;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-ul{
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	text-decoration: none;
-}
-#topo ul{
-	background: #b10333;
-	margin-top: 30px;
-	float: left;
-}
-#topo ul li{
-	float: left;
+body {
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    background: #fff url(../img/fundo.png) repeat-x;
 }
 
-#container{
-	width: 750px;
-	margin: 0 auto;
-	border: 1px solid;
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
 }
-#topo{
-	height: 150px;
-	background: url(../img/detalhe-topo.png) no-repeat right top;
-	border: 1px solid red;
+
+#topo ul {
+    background: #b10333;
+    margin-top: 30px;
+    float: left;
 }
-.logo{
-	width: 152px;
-	height: 66px;
-	background: url(../img/logo.png) no-repeat center;
-	text-indent: -30000;
+
+#topo ul li {
+    float: left;
+}
+
+#topo ul a {
+    font-size: 0.9em;
+    display: block;
+    padding: 0.5em;
+    line-height: 2.1em;
+    text-decoration: none;
+    color: #fff;
+    background: url(../img/divisor.png);
+}
+
+#topo ul .primeira a {
+    background: none;
+	
+}
+
+#container {
+    width: 750px;
+    margin: 0 auto;
+    border: 1px solid;
+}
+
+#topo {
+    height: 150px;
+    background: url(../img/detalhe-topo.png) no-repeat right top;
+    border: 1px solid red;
+}
+
+.logo {
+    width: 152px;
+    height: 66px;
+    background: url(../img/logo.png) no-repeat center;
+    text-indent: -30000;
 }
